vm/move-prover/tests/sources/functional/aborts_if_with_code.exp
Move prover returns: exiting with boogie verification errors
error: function does not abort with any of the expected codes

    ┌── tests/sources/functional/aborts_if_with_code.move:69:5 ───
    │
 69 │     fun aborts_if_with_code_mixed_invalid(x: u64) {
    │     ^
    │
    =     at tests/sources/functional/aborts_if_with_code.move:69:5: aborts_if_with_code_mixed_invalid
    =     at tests/sources/functional/aborts_if_with_code.move:70:9: aborts_if_with_code_mixed_invalid
    =     at tests/sources/functional/aborts_if_with_code.move:73:9: aborts_if_with_code_mixed_invalid
    =     at tests/sources/functional/aborts_if_with_code.move:74:13: aborts_if_with_code_mixed_invalid
    =     at tests/sources/functional/aborts_if_with_code.move:76:5: aborts_if_with_code_mixed_invalid

error: function does not abort with any of the expected codes

    ┌── tests/sources/functional/aborts_if_with_code.move:97:5 ───
    │
 97 │     fun aborts_with_invalid(x: u64) {
    │     ^
    │
    =     at tests/sources/functional/aborts_if_with_code.move:97:5: aborts_with_invalid
    =     at tests/sources/functional/aborts_if_with_code.move:98:9: aborts_with_invalid
    =     at tests/sources/functional/aborts_if_with_code.move:101:9: aborts_with_invalid
    =     at tests/sources/functional/aborts_if_with_code.move:102:13: aborts_with_invalid
    =     at tests/sources/functional/aborts_if_with_code.move:104:5: aborts_with_invalid

error: function does not abort with any of the expected codes

     ┌── tests/sources/functional/aborts_if_with_code.move:123:5 ───
     │
 123 │     fun aborts_with_mixed_invalid(x: u64) {
     │     ^
     │
     =     at tests/sources/functional/aborts_if_with_code.move:123:5: aborts_with_mixed_invalid
     =     at tests/sources/functional/aborts_if_with_code.move:124:9: aborts_with_mixed_invalid
     =     at tests/sources/functional/aborts_if_with_code.move:127:9: aborts_with_mixed_invalid
     =     at tests/sources/functional/aborts_if_with_code.move:128:13: aborts_with_mixed_invalid
     =     at tests/sources/functional/aborts_if_with_code.move:130:5: aborts_with_mixed_invalid

error: function does not abort with any of the expected codes

    ┌── tests/sources/functional/aborts_if_with_code.move:29:5 ───
    │
 29 │     fun conditional_abort_invalid(x: u64, y: u64): u64 {
    │     ^
    │
    =     at tests/sources/functional/aborts_if_with_code.move:29:5: conditional_abort_invalid
    =     at tests/sources/functional/aborts_if_with_code.move:30:9: conditional_abort_invalid
    =     at tests/sources/functional/aborts_if_with_code.move:31:13: conditional_abort_invalid
    =     at tests/sources/functional/aborts_if_with_code.move:37:5: conditional_abort_invalid

error: function does not abort with any of the expected codes

    ┌── tests/sources/functional/aborts_if_with_code.move:45:5 ───
    │
 45 │     fun exec_failure_invalid(x: u64): u64 {
    │     ^
    │
    =     at tests/sources/functional/aborts_if_with_code.move:45:5: exec_failure_invalid
    =     at tests/sources/functional/aborts_if_with_code.move:46:12: exec_failure_invalid
